--- a/page2/style.css
+++ b/page2/style.css
@@ -6,23 +6,85 @@
 }
 
 body {
+  width: 393px;
+  height: 852px;
+  margin: 0 auto;
   font-family: Inter, sans-serif;
-  background-color: #ffffff;
+  background-color: #d1d1d1;
   color: #000000;
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-form {
-  align-items:center;
-  max-width: 500px;
+.button-back-section{
+  position: absolute;
+  padding: 30px 337px 600px 34px;
+  cursor: pointer;
+}
+
+.button-back{
+  background: rgba(0, 0, 0, 0.264);
+  border: none;
+  color: #ffffff;
+  padding: 12px 7px;
+  border-radius: 5px;
+  outline: none;
+  transition: background 0.3s;
+}
+
+.button-back:hover {
+  background: rgba(34, 34, 34, 0.8);
+}
+
+
+.image-abstraction{
+    width: 134px;
+    height: 210px;
+    position: absolute;
+    top: -7px;
+    left: 250px;
+}
+
+.avatar-container {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  position: absolute;
+  padding: 80px 139px 0 154px;
   margin: 0 auto;
-  padding: 30px;
+}
+
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  z-index: 1;
+  position: relative;
+}
+
+.profile-icon{
+  position: relative;
+  left:0;
+  top: 35px;
+  left: -20px;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.edit-avatar-btn:hover {
+  background: #123a96;
+}
+
+form {
+  height: 703px;
+  padding: 80px 30px 64px 30px;
   background-color: #ffffff;
   border-radius: 40px 40px 30px 30px;
-  box-shadow: 0 0 10px #cccccc;
+  box-sizing: border-box;
+  margin-top: 120px;
+  position: relative;
 }
 
 .container {
@@ -32,109 +94,95 @@ form {
   max-height: 100%;
   overflow: hidden;
   border-radius: 20px;
-  overflow-y: auto;
 }
 
-.background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+
+.title {
+  text-align: left;
+  font-size: 25px;
+  font-weight: 500;
+  margin-bottom: 32px;
+  padding-left: 35px;
 }
 
 .profile-card {
-  background-color: rgb(255, 255, 255);
-  background-image: url(image/bg.png);
+  width: 393px;
+  height: 852px;
+  background: linear-gradient(
+    to bottom,
+    rgba(180, 0, 0, 0.7),
+    rgba(255, 255, 255, 0) 63%);
   background-repeat: no-repeat;
   border-radius: 20px;
-  padding: 20px;
-  position: relative;
-  z-index: 1;
-  min-height: 100%;
+  padding: 10px 0 10px 0;
 }
 
 .status-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0px 16px;
   position: sticky;
-  z-index: 100;
   }
 
 .time {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 10px;
 }
 
 .social-icons {
   display: flex;
   gap: 2px;
-}
-
-.social-icons{
-  width: 10px;
-  height: 10px;
-  display: flex;
+  padding: 0 15px;
 }
 
 .icon {
   margin-right: 2px;
 }
 
+.icons {
+  padding-right: 15px;
+}
+
 .battery-procent {
  font-size: 10px;
 }
 
-.avatar-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  margin-bottom: 20px;
-}
-
-.avatar {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-.profile-icon{
-  position: absolute;
-  bottom: 1px;
-  right: 115px;
-  cursor: pointer;
-}
-
-.edit-avatar-btn:hover {
-  background: #123a96;
-}
-
-.title {
-  text-align: center;
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 30px;
-}
-
-.profile-form {
-  width: 100%;
-}
 
 .form-group {
   margin-bottom: 30px;
-  max-width: 260px;
-  
+  max-width: 261px;
+  margin: 0 auto;
 }
 
 .form-group label {
   display: block;
-  margin-bottom: 6px;
+  margin-bottom: 2px;
   font-size: 14px;
-  color: #666;
+
+}
+
+.gray{
+  color: gray;
+}
+.name{
+margin-bottom: 14px;
+}
+
+.lastName{
+margin-bottom: 14px;
+}
+
+.username{
+margin-bottom: 14px;
+}
+
+.email{
+margin-bottom: 14px;
+}
+
+.phone{
+margin-bottom: 23px;
 }
 
 .form-group input[type="text"],
@@ -142,17 +190,11 @@ form {
 .form-group input[type="tel"],
 .form-group select {
   width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
+  padding: 10px;
+  border: 1px solid #000000;
   border-radius: 12px;
-  font-size: 16px;
+  font-size: 12px;
   outline: none;
-}
-
-.form-group input:focus,
-.form-group select:focus {
-  border-color: #1a56db;
-  box-shadow: 0 0 0 2px rgba(26, 86, 219, 0.2);
 }
 
 .phone-input-wrapper {
@@ -161,13 +203,11 @@ form {
 }
 
 .country-code {
-  padding: 12px;
+  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 12px;
-  font-size: 16px;
+  font-size: 12px;
   background: white;
-  appearance: none;
-  -webkit-appearance: none;
   cursor: pointer;
 }
 
@@ -175,8 +215,27 @@ form {
   padding: 10px;
 }
 
+.form-group-list select{
+   width: 261px;
+   padding: 10px;
+   border: 1px solid #000000;
+   border-radius: 12px;
+   font-size: 12px;
+   
+}
+
+.form-group-list{
+  margin: 0 auto;
+  margin-bottom: 33px;
+  text-align: center;
+}
+
+.form-group-list-birth {
+  margin-bottom: 7px;
+}
+
 .change-password-btn {
-  width: 100%;
+  width: 261px;
   padding: 14px;
   background: #124A7D;
   color: white;
@@ -189,19 +248,9 @@ form {
   align-items: center;
   gap: 10px;
   cursor: pointer;
-  margin-top: 100px;
-  max-width: 260px;
-  margin: auto;
-  
+  margin: 0 auto;
   }
 
 .change-password-btn:hover {
   background: #124A7D;
-}
-
-/* Поддержка адаптивности */
-@media (max-width: 400px) {
-  .container {
-    padding: 10px;
-  }
 }
